--- a/templates/zshrc.d/anthias.zsh.j2
+++ b/templates/zshrc.d/anthias.zsh.j2
@@ -4,6 +4,9 @@ function reset_docker_tag() {
     export DOCKER_TAG="$(git rev-parse --short HEAD)"
 }
 
+# Export PATH
+export PATH=$PATH:/snap/bin
+
 # Export various environment variables
 export MY_IP=$(ip -4 route get 8.8.8.8 | awk {'print $7'} | tr -d '\n')
 TOTAL_MEMORY_KB=$(grep MemTotal /proc/meminfo | awk {'print $2'})
